--- a/front/index.html
+++ b/front/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/x-icon" href="https://cdn.jsdelivr.net/npm/twemoji@11.3.0/2/svg/1f575.svg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <link rel="stylesheet" href="https://rsms.me/inter/inter.css" />
+    <title>Login</title>
   </head>
   <body>
     <div id="root"></div>
