--- a/front/index.html
+++ b/front/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/x-icon" href="https://cdn.jsdelivr.net/npm/twemoji@11.3.0/2/svg/1f575.svg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://rsms.me/inter/inter.css" />
-    <title>Login</title>
+    <title>Cyber</title>
   </head>
   <body>
     <div id="root"></div>
